# future-meta

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: update-fee-data.yml
crates/future-meta/: Cargo.toml
crates/future-meta-daemon/: Cargo.toml
crates/future-meta-daemon/src/: db.rs  export.rs  hash.rs  latest.rs  lib.rs  main.rs  parse.rs  refresh.rs  source.rs
crates/future-meta-daemon/tests/: daemon_pipeline.rs
crates/future-meta/examples/: online_smoke.rs  perf_smoke.rs
crates/future-meta/src/: archive.rs  download.rs  error.rs  fee.rs  lib.rs  model.rs  query.rs  symbol.rs
crates/future-meta/tests/: client_archive.rs
docs/: deployment.md
docs/superpowers/plans/: 2026-06-04-future-meta-fee-history.md
docs/superpowers/specs/: 2026-06-04-future-meta-fee-history-design.md
