[package]
name = "future-meta-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "future-meta-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
csv.workspace = true
future-meta = { path = "../future-meta" }
hex.workspace = true
reqwest = { workspace = true, features = ["blocking", "cookies"] }
rusqlite.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
