[package]
name = "future-meta"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[example]]
name = "online_smoke"
path = "examples/online_smoke.rs"
required-features = ["download"]

[features]
default = []
download = ["dep:reqwest", "dep:tokio"]

[dependencies]
bincode.workspace = true
hex.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, optional = true }
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
